--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "papaparse": "^5.3.1",
     "pg": "^8.6.0",
     "pino": "^6.11.3",
     "pino-pretty": "^5.0.2",
