--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,21 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
+  "inputs": [
+    {
+      "id": "envFile",
+      "type": "pickString",
+      "description": "What client do you want to run?",
+      "default": "env",
+      "options": [
+        "local",
+        "remote",
+        "${workspaceFolderBasename}"
+      ]
+      // https://github.com/microsoft/vscode/issues/86523
+      // https://code.visualstudio.com/docs/editor/variables-reference
+    }
+  ],
   "configurations": [
     {
       "type": "node",
@@ -11,7 +26,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "envFile": "${workspaceFolder}/.env",
+      "envFile": "${workspaceFolder}/.env/${input:envFile}",
       "program": "${workspaceFolder}/bin/www",
       "console": "integratedTerminal"
     }
