--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "envFile": "${workspaceFolder}/.env/${input:envFile}",
+      "envFile": "${workspaceFolder}/.env_/${input:envFile}",
       "program": "${workspaceFolder}/bin/www",
       "console": "integratedTerminal"
     }
