--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "papaparse": "^5.3.1",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
     "pg": "^8.6.0",
     "pino": "^6.11.3",
     "pino-pretty": "^5.0.2",
