--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ PGPASSWORD=
 CMS_TOKEN=
 JWT_SECRET=
 JWT_EXPIRY=
-ENCRYPTION_SECRET=
+ENCRYPTION_TOKEN=
 GAPI_CREDENTIALS=
 GAPI_PROJECT_ID=
 GAPI_BUCKET_NAME=
