--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@google-cloud/storage": "^5.11.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cuid": "^2.1.8",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
